--- a/index.html
+++ b/index.html
@@ -1020,13 +1020,26 @@ window.addEventListener('wheel', (event) => {
 <!---------------------watchOS 10----------------->
 <h2 class="graphicTitle hidden firstTitle">watchOS 26 Concept</h2>
 <p class="caption">Adobe After Effects, Adobe Illustrator</p>
-<img class="houdiniIcon" src="https://upload.wikimedia.org/wikipedia/commons/1/15/Houdini3D_icon.png"/>
+
+<div class="sides usides">
+<img class="houdiniIcon" src="images/ae-icon.png"/>
+<img class="houdiniIcon" src="images/ai-icon.svg.png"/>
+</div>
+
+<style>
+  .usides {
+    width: 200px;
+    margin-right: auto;
+    margin-left: auto;
+  } 
+</style>
+
 <iframe width="800px" height="400px"  src="https://www.youtube.com/embed/jaUou0GYEnc?si=xCqGBbgaPd3h9wLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
 
 <h2 class="graphicTitle hidden firstTitle">Rise of particles</h2>
 <p class="caption">HOUDINI 20.5</p>
-<img class="houdiniIcon" src="https://upload.wikimedia.org/wikipedia/commons/1/15/Houdini3D_icon.png"/>
+<img class="houdiniIcon" src="images/houdini-icon.png"/>
 
 <style>
   .caption {
