--- a/tutorials/11-06-25-swiftui-liquid-glass-internals-tutorial.html
+++ b/tutorials/11-06-25-swiftui-liquid-glass-internals-tutorial.html
@@ -90,6 +90,7 @@
  <h2>Inspecting Button </h2>
 <pre><code class="language-swift">
   Button("Liquid Glass"){}
+             .font(.largeTitle)
             .buttonStyle(.glass)
 </code></pre>
 <p class="pad">
@@ -98,6 +99,7 @@ We can use the library by eppending the ```bone(into: structure.txt)``` modifier
                                
 <pre><code class="language-swift">
   Button("Liquid Glass"){}
+            .font(.largeTitle)
             .buttonStyle(.glass)
             .bone(into: "structure.txt")
 </code></pre>
