--- a/tutorials/11-06-25-swiftui-liquid-glass-internals-tutorial.html
+++ b/tutorials/11-06-25-swiftui-liquid-glass-internals-tutorial.html
@@ -51,7 +51,7 @@
     </section>
     
     
-        <h1 class="about sma">Dive into Liquid glass internals with Bone.swift</h1>
+        <h1 class="about sma">Dive into Liquid Glass internals with Bone.swift</h1>
         <p class="date">11/06/2025</p>
     <style>
 
