--- a/sport.html
+++ b/sport.html
@@ -191,11 +191,12 @@ if (document.startViewTransition){
     
 	  
 	 <ul class="pad fade sportUl">
+     <li><b>5th</b> place Czech Republic 10000m National Championships 2025 (Men)</li>
      <li><b>1st</b> place Moravian-Silesian Championships Half marathon 2024 (Men)</li>
      <li><b>1st</b> place Moravian-Silesian Championships 5000m 2024 (Men)</li>
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2018 (Juniors)</li>
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2019 (Men)</li>
-	 <li><b>2nd</b> place Czech Republic 10000m Championships 2018 (Juniors) </li>
+	 <li><b>2nd</b> place Czech Republic 10000m National Championships 2018 (Juniors) </li>
      <li><b>2nd</b> place Czech Republic 10000m Academic Championships 2020 </li>
 	 <li><b>1st</b> place World Marathon Challenge 2019 (7 halfmarathons in 7 days on 7 continents) </li>
 	 <li><b>1st</b> place Běhej Lesy Lednice and Bílá 2018 </li>
