--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,8 @@
 
 <body>
      <div id="mount"></div>
-
+ <script type="module" src="dist/lib.bundle.js">
+  </script>
 
 <script type="module">
    new Switcher().set({
