--- a/odemo/index.html
+++ b/odemo/index.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <meta name="view-transition" content="same-origin">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="module" src="dist/lib.bundle.js"></script>
 
 <style>
