--- a/odemo/child-A.html
+++ b/odemo/child-A.html
@@ -1,5 +1,5 @@
 <meta name="view-transition" content="same-origin">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <body></body>
 
 <style>
