--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@ radius: "1rem",
 }).add([
                          new Link().set({
     text: "About",
-    url: "#a"
+    link: "#a"
 }),new Dropdown().set({
   behaviour: "mouseover",
   pad: [{"a":40}],
@@ -98,7 +98,7 @@ radius: "1rem",
     url: "#b"
 }),new Link().set({
     text: "Contact",
-    url: "https://www.abcnews.com"
+    url: "https://www.apple.com"
 })
 
                     ]) }, 
