--- a/demo/index.html
+++ b/demo/index.html
@@ -215,7 +215,8 @@ new Text("Hello").set({
             name: "blast",
             color: "green",
             width: "1px"
-        }
+        },
+        range: ["300px", "900px"]
     }
 }).render("#mount"); 
  
