--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,18 @@ window.addEventListener('wheel', (event) => {
 --->
 
 <h2 class="graphicTitle hidden firstTitle hideOnMobile">I also design things...</h2>
+
+<h2 class="graphicTitle hidden firstTitle">NodalityJS</h2>
+<p class="caption">Innovative JS library using arrays of elements and nodes.</p>
+<a href="nodalityjs.github.io" class="caption clean">nodalityjs.github.io</a>
+
+<div class="sides usides">
+<img class="houdiniIcon" src="images/houdini-icon.png"/>
+</div>
+
+
+<iframe width="800px" height="400px" src="https://www.youtube.com/embed/R3pzSNK-gSo?si=sWjv1qj1RQDkwVaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <!---------------------watchOS 10----------------->
 <h2 class="graphicTitle hidden firstTitle">watchOS 26 Concept</h2>
 <p class="caption">Adobe After Effects, Adobe Illustrator</p>
@@ -1032,6 +1044,12 @@ window.addEventListener('wheel', (event) => {
     margin-right: auto;
     margin-left: auto;
   } 
+
+  .clean {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+  }
 </style>
 
 <iframe width="800px" height="400px"  src="https://www.youtube.com/embed/jaUou0GYEnc?si=xCqGBbgaPd3h9wLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -1110,6 +1128,13 @@ window.addEventListener('wheel', (event) => {
   
   <h3 class="graphicTitle fade-in dontShowMobile">...and make things for the web.</h3>
       
+    <section class="js-app hidden">
+  <h3 class="app-title app-title-web">Nodality JS</h3>
+  <p class="desc">Innovative JS library using arrays of elements and nodes.</p>
+  <a class="tar tar-small" target="_blank" href="https://nodalityJS.github.io">Docs</a>
+  </section>
+
+
   <section class="js-app hidden">
   <h3 class="app-title app-title-web">relays.app</h3>
   <p class="desc">Web version of Relays</p>
