--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ window.addEventListener('wheel', (event) => {
 
 <h2 class="graphicTitle hidden firstTitle hideOnMobile">I also design things...</h2>
 
-<h2 class="graphicTitle hidden firstTitle">NodalityJS</h2>
+<h2 class="graphicTitle hidden firstTitle largeMar">NodalityJS</h2>
 <p class="caption">Innovative JS library using arrays of elements and nodes.</p>
 <a href="nodalityjs.github.io" class="caption clean">nodalityjs.github.io</a>
 
@@ -1032,6 +1032,11 @@ window.addEventListener('wheel', (event) => {
 <img class="houdiniIcon" src="images/houdini-icon.png"/>
 </div>
 
+<style>
+  .largeMar {
+    margin-top: 400px;
+  }
+</style>
 
 <iframe width="800px" height="400px" src="https://www.youtube.com/embed/R3pzSNK-gSo?si=sWjv1qj1RQDkwVaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
