--- a/index.html
+++ b/index.html
@@ -1033,9 +1033,14 @@ window.addEventListener('wheel', (event) => {
 </div>
 
 <style>
+
+  @media (min-device-width: 415px) {
+
+  
   .largeMar {
     margin-top: 400px;
   }
+}
 </style>
 
 <iframe width="800px" height="400px" src="https://www.youtube.com/embed/R3pzSNK-gSo?si=sWjv1qj1RQDkwVaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
