--- a/sls-beta/index.html
+++ b/sls-beta/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>App</title>
+  <title>SLS 3</title>
 
    <script type="importmap">
          {
