--- a/sls-beta/detail.html
+++ b/sls-beta/detail.html
@@ -46,7 +46,8 @@ class ProductDetail extends Base {
       new Image().set({
         type: "img",
         width: "50%",
-        url: this.obj.url
+        url: this.obj.url,
+        vtn: this.obj.name
       }),
 
       // Right column: text, list, link
