--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -42,7 +42,8 @@ class ProductCard extends Base {
 new Image().set({
   type: "img",
   width: "300px",
-  url: this.obj.url
+  url: this.obj.url,
+  vtn: name
 }),
 
 new Text(this.obj.name).set({
@@ -83,7 +84,7 @@ new Text("Produkty")
     "price": "4990",
     "info": ["First"],
     "sizes": ["XS/S"],
-    "url": "https://blue70.weebly.com/uploads/4/0/5/5/40554337/s660476911256653682_p3_i16_w1500.jpeg"
+    "url": "https://blue70.weebly.com/uploads/4/0/5/5/40554337/s660476911256653682_p1_i24_w1500.jpeg"
   },
   {
     "name": "Reaction",
