--- a/sls-beta/detail.html
+++ b/sls-beta/detail.html
@@ -19,7 +19,7 @@
       </style>
 </head>
 <body>
-  <script type="module" src="../dist/lib.bundle.js">
+  <script type="module" src="dist/lib.bundle.js">
   </script>
   <div id="mount"></div>
 
