--- a/sls-beta/detail.html
+++ b/sls-beta/detail.html
@@ -21,6 +21,9 @@
 <body>
   <script type="module" src="dist/lib.bundle.js">
   </script>
+
+     <script type="module" src="components/nav.js"></script>
+
   <div id="mount"></div>
 
   <script type="module">
