--- a/sls-beta/index.html
+++ b/sls-beta/index.html
@@ -102,9 +102,14 @@ new Blue70Link({
 .render("#mount"); 
 
 
-new Text("Petr Vabrousek @2025").set({
-  size: "S1"
+new Center().items([
+new Text("Petr Vabrousek@2025").set({
+  size: "S6",
+  font: "Arial",
+  pad: [{tb: "1rem"}]
 })
+])
+.render("#mount")
 
 // We can host on github and redirect for free
 
