--- a/sls-beta/detail.html
+++ b/sls-beta/detail.html
@@ -111,7 +111,7 @@ class ProductDetail extends Base {
 let detailJSON = [
   {
     "name": "Helix",
-    "price": "CZK 999",
+    "price": "25999 Kč",
     "url": "https://blue70.weebly.com/uploads/4/0/5/5/40554337/s660476911256653682_p1_i24_w1500.jpeg",
     "description": "Helix je vytvořený pro sportovce, kteří odmítají cokoli jiného než to nejlepší. Každý detail je navržen pro rychlost, preciznost a neúnavnou snahu o vítězství.",
     "details": [
