--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -56,23 +56,15 @@ new Wrapper().set({
 new Text(this.obj.name).set({
   color: "black",
   weight: "bold",
-  size: "S5",
-   pad: [
-        {
-            a: 10
-        }
-    ]
+  size: "S5"
 }),
 
 new Text(this.obj.price).set({
   weight: "bold", // bold true inifx
   color: "black",
   exact: "1.1rem",
-   pad: [
-        {
-            a: 10
-        }
-    ]
+  pad: [{b: "0.7rem"}]
+   
 }),
 
 new Link().set({
@@ -109,21 +101,21 @@ new Text("Produkty")
   let products = [
   {
     "name": "Helix",
-    "price": "4990",
+    "price": "25990 Kč",
     "info": ["First"],
     "sizes": ["XS/S"],
     "url": "https://blue70.weebly.com/uploads/4/0/5/5/40554337/s660476911256653682_p1_i24_w1500.jpeg"
   },
   {
     "name": "Reaction",
-    "price": "990",
+    "price": "25990 Kč",
     "info": ["First"],
     "sizes": ["XS/S"],
     "url": "https://blue70.weebly.com/uploads/4/0/5/5/40554337/s660476911256653682_p3_i16_w1500.jpeg"
   },
   {
     "name": "Sprint",
-    "price": "990",
+    "price": "25990 Kč",
     "info": ["First"],
     "sizes": ["XS/S"],
     "url": "https://blue70.weebly.com/uploads/4/0/5/5/40554337/s660476911256653682_p3_i16_w1500.jpeg"
