--- a/sls-beta/detail.html
+++ b/sls-beta/detail.html
@@ -119,6 +119,7 @@ const id = urlParams.get("id"); // e.g. detail.html?id=helix
     new Text("Error loading product data").render("#mount");
   });
 
+  // 202537 works in browser
 
   
   </script>
