--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -61,7 +61,7 @@
                 text: "Koupit",
                 background: "#3498db",
                 color: "white",
-                url: `/detail.html?id=${this.obj.name}`,
+                url: `./detail.html?id=${this.obj.name}`,
                 hover: {
                   color: "#3498db",
                   background: "white"
