--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -62,6 +62,7 @@
                 background: "#3498db",
                 color: "white",
                 url: `./detail.html?id=${this.obj.id}`,
+                fixMobileTap: true,
                 hover: {
                   color: "#3498db",
                   background: "white"
@@ -71,7 +72,8 @@
               })
             ])
           ]);
-      }
+      } // 205954 WORKS
+      // locally have to type manually http://localhost:2000/detail?id=helix 
     }
 
     // ✅ Title
