--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -113,6 +113,24 @@
       .render("#mount");
 */
 
+
+
+new Wrapper().set({background: "green", width: "300px", height: "300px"}).add([
+  new Link().set({
+                text: "Koupit",
+                background: "#3498db",
+                color: "white",
+                url: `./detail.html?id=${this.obj.id}`,
+               // fixMobileTap: true,
+                hover: {
+                  color: "#3498db",
+                  background: "white"
+                },
+                radius: "1rem",
+                pad: [{lr: "2rem"}, {tb: "1rem"}]
+              })
+]).render("#mount");
+
  import { FooterEl } from "./components/footer.js";
 
 fetch("./products.json")
