--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -120,7 +120,7 @@ new Wrapper().set({background: "green", width: "300px", height: "300px"}).add([
                 text: "Koupit",
                 background: "#3498db",
                 color: "white",
-                url: `./detail.html?id=${this.obj.id}`,
+                url: `./detail.html?id=helix`,
                // fixMobileTap: true,
                 hover: {
                   color: "#3498db",
