--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -26,7 +26,10 @@
    <script type="module" src="components/nav.js"></script>
      <script type="module" src="components/footer.js"></script>
   <div id="mount"></div>
-
+<a href="./detail.html?id=helix"
+   style="display:inline-block;padding:1rem 2rem;background:#3498db;color:#fff;border-radius:1rem;">
+   Native Test Link
+</a>
   <script type="module">
  class ProductCard extends Base {
       constructor(obj){
@@ -143,7 +146,7 @@ new Link().set({
                 },
                 radius: "1rem",
                 pad: [{lr: "2rem"}, {tb: "1rem"}]
-              }).render("#mount")
+              }).render("#mount");
 
 
 new Link().set({
@@ -158,7 +161,7 @@ new Link().set({
                 },
                 radius: "1rem",
                 pad: [{lr: "2rem"}, {tb: "1rem"}]
-              }).render("#mount")
+              }).render("#mount");
 
  import { FooterEl } from "./components/footer.js";
 
