--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -64,7 +64,7 @@
                 text: "Koupit",
                 background: "#3498db",
                 color: "white",
-                url: `./detail.html?id=${this.obj.id}`,
+                url: `https://filipvabrousek.github.io/sls-beta/detail.html?id=${this.obj.id}`, //`./detail.html?id=${this.obj.id}`,
                 fixMobileTap: true,
                 hover: {
                   color: "#3498db",
