--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@ window.addEventListener('wheel', (event) => {
     @media screen and (min-device-width: 430px) {
       
       .js-app > h3,  .js-app > p, .caption {
-      color: white;
+      color: rgb(67, 67, 67);
     }
 
     .hideOnMobile {
