--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@ window.addEventListener('wheel', (event) => {
   <section class="js-app hidden">
   <h3 class="app-title app-title-web hidden">Bone.swift</h3>
   <p class="desc hidden">Swift library for dumping underlying UIKit/AppKit views.</p>
-  <a class="tar tar-small hidden fade-in" target="_blank" href="https://github.com/filipvabrousek/Libraries/blob/master/Pin.md">More</a>
+  <a class="tar tar-small hidden fade-in" target="_blank" href="https://github.com/filipvabrousek/bone">More</a>
       </section>
 
 <section class="js-app hidden">
