--- a/sls-beta/team-blueseventy.html
+++ b/sls-beta/team-blueseventy.html
@@ -35,7 +35,7 @@
       }
 
       render(){
-        return new Wrapper(/*isLink: true, child: `detail.html?id=a`*/)
+        return new Wrapper()
           .add([
             new Image().set({
               type: "img",
@@ -50,25 +50,6 @@
                 color: "black",
                 weight: "bold",
                 size: "S5"
-              }),
-              new Text(this.obj.price).set({
-                weight: "bold",
-                color: "black",
-                exact: "1.1rem",
-                pad: [{b: "0.7rem"}]
-              }),
-              new Link().set({
-                text: "Koupit",
-                background: "#3498db",
-                color: "white",
-                url: `https://filipvabrousek.github.io/sls-beta/detail.html?id=${this.obj.id}`, //`./detail.html?id=${this.obj.id}`,
-                fixMobileTap: true,
-                hover: {
-                  color: "#3498db",
-                  background: "white"
-                },
-                radius: "1rem",
-                pad: [{lr: "2rem"}, {tb: "1rem"}]
               })
             ])
           ]);
@@ -77,7 +58,7 @@
     }
 
     // ✅ Title
-    new Text("Produkty")
+    new Text("Team Blueseventy")
       .set({
         size: "S1",
         font: "Arial",
@@ -119,7 +100,7 @@
 
  import { FooterEl } from "./components/footer.js";
 
-fetch("./products.json")
+fetch("./team.json")
   .then(res => res.json())
   .then(data => {
     new FlexGrid()
