--- a/sls-beta/detail.html
+++ b/sls-beta/detail.html
@@ -139,7 +139,7 @@ const id = urlParams.get("id"); // e.g. detail.html?id=helix
     new Text("Four").set({size: "S1", color: "#1abc9c", font: "Arial"})
 ];
 
-new Slider(texts, null)
+new Slider(texts, nullde)
  
 .render("#mount"); 
 
