--- a/sls-beta/team-blueseventy.html
+++ b/sls-beta/team-blueseventy.html
@@ -39,7 +39,7 @@
           .add([
             new Image().set({
               type: "img",
-              width: "300px",
+              width: "100%",
               url: this.obj.url,
               vtn: this.obj.name
             }),
