--- a/sls-beta/index.html
+++ b/sls-beta/index.html
@@ -82,7 +82,7 @@ new Center()
 new Blue70Link({ 
   text: "Prohlédnout neopreny",
  background: "#3498db",
-  url: "products.html"
+  url: "https://filipvabrousek.github.io/sls-beta/products?cat=swimsuits"
  }).render(),
  
 new Blue70Link({
