--- a/sls-beta/index.html
+++ b/sls-beta/index.html
@@ -81,8 +81,14 @@ new Center()
 
 new Blue70Link({ 
   text: "Prohlédnout neopreny",
- background: "#3498db",
+  background: "#3498db",
   url: "https://filipvabrousek.github.io/sls-beta/products?cat=swimsuits"
+ }).render(),
+
+ new Blue70Link({ 
+  text: "Categories",
+  background: "#3498db",
+  url: "https://filipvabrousek.github.io/sls-beta/categories"
  }).render(),
  
 new Blue70Link({
